# scoped-singleton

./: CMakeLists.txt  Dockerfile  Makefile  readme.md  todo.md
.github/workflows/: build-and-test.yml  presentation.yml
pres/: Dockerfile  Makefile  preamble.tex  pres.md  readme.md
src/: CMakeLists.txt  HTTP.cpp  HTTP.h  ScopedSingleton.cpp  ScopedSingleton.hpp
tests/: CMakeLists.txt  HTTPTest.cpp  ScopedSingletonTest.cpp
